-ref FastProductivityViewModel::_queue, dt_EmployeeTable

--- a/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
@@ -160,7 +160,7 @@
 
             <StackPanel Grid.Row="1" >
                 <ScrollViewer MinHeight="200" >
-                    <DataGrid ItemsSource="{Binding Source={StaticResource Employees}}"
+                    <DataGrid ItemsSource="{Binding Employees}"
                       VerticalAlignment="Top"
                       >
                         <DataGrid.Columns>
