-ref dt_DataGrid

--- a/Code/WorkSpeed.DesktopClient/App.xaml
+++ b/Code/WorkSpeed.DesktopClient/App.xaml
@@ -11,6 +11,7 @@
                  <ResourceDictionary Source="pack://application:,,,/WorkSpeed.DesktopClient;component/Resources/Images.xaml" />
                  <ResourceDictionary Source="pack://application:,,,/WorkSpeed.DesktopClient;component/Resources/ButtonStyles.xaml" />
                  <ResourceDictionary Source="pack://application:,,,/WorkSpeed.DesktopClient;component/Resources/CheckBoxStyle.xaml" />
+                 <ResourceDictionary Source="pack://application:,,,/WorkSpeed.DesktopClient;component/Resources/ComboBoxStyles.xaml" />
                  <ResourceDictionary Source="pack://application:,,,/WorkSpeed.DesktopClient;component/Resources/DataGridStyles.xaml" />
                  <ResourceDictionary Source="pack://application:,,,/WorkSpeed.DesktopClient;component/Resources/DataTemplates.xaml" />
              </ResourceDictionary.MergedDictionaries>
