--- a/Code/WorkSpeed.DesktopClient/Resources/CheckBoxStyle.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/CheckBoxStyle.xaml
@@ -16,25 +16,27 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="CheckBox">
-                    <Grid>
-                        <Ellipse x:Name="PART_OuterCircle"
-                                 StrokeThickness="{TemplateBinding BorderThickness, 
-                                                      Converter={StaticResource conv_ThicknessToThickness}, 
-                                                      ConverterParameter=outer}"
-                                 Stretch="Fill"
-                                 Stroke="{TemplateBinding BorderBrush}"
-                                 Fill="{x:Null}"
-                                 />
-                        <Ellipse x:Name="PART_InnerCircle"
-                                 Stretch="Fill"
-                                 StrokeThickness="{TemplateBinding BorderThickness, 
-                                                      Converter={StaticResource conv_ThicknessToThickness}, 
-                                                      ConverterParameter=inner}"
-                                 Stroke="Transparent"
-                                 Fill="{TemplateBinding Foreground}"
-                                 Visibility="{TemplateBinding IsChecked, Converter={StaticResource conv_BooleanToVisibility}}"
-                                 />
-                    </Grid>
+                    <Border Background="Transparent">
+                        <Grid>
+                            <Ellipse x:Name="PART_OuterCircle"
+                                     StrokeThickness="{TemplateBinding BorderThickness, 
+                                                          Converter={StaticResource conv_ThicknessToThickness}, 
+                                                          ConverterParameter=outer}"
+                                     Stretch="Fill"
+                                     Stroke="{TemplateBinding BorderBrush}"
+                                     Fill="{x:Null}"
+                                     />
+                            <Ellipse x:Name="PART_InnerCircle"
+                                     Stretch="Fill"
+                                     StrokeThickness="{TemplateBinding BorderThickness, 
+                                                          Converter={StaticResource conv_ThicknessToThickness}, 
+                                                          ConverterParameter=inner}"
+                                     Stroke="Transparent"
+                                     Fill="{TemplateBinding Foreground}"
+                                     Visibility="{TemplateBinding IsChecked, Converter={StaticResource conv_BooleanToVisibility}}"
+                                     />
+                        </Grid>
+                    </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
